Prevents social icons to block the logo in the header when navigating on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -4751,3 +4751,8 @@ h6 {
   .social-links .telegram-link img {
     width: 30px;
     height: 30px; }
+
+.nav-item .sharethis-inline-share-buttons {
+  margin-top: 24px;
+  position: absolute;
+  right: 0; }
