--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -29,3 +29,11 @@
         }
     }
 }
+
+.nav-item {
+    .sharethis-inline-share-buttons {
+        margin-top: 24px;
+        position: absolute;
+        right: 0;
+    }
+}
